Fix vertical alignment

--- a/client/client.css
+++ b/client/client.css
@@ -1,3 +1,8 @@
+.wrapper {
+    display: flex;
+    justify-content: center;
+}
+
 .board {
     display: inline-block;
 }
